@@ -1,3 +1,9 @@
+2008-09-30  Dustin J. Mitchell <dustin@zmanda.com>
+	* common-src/semaphore.h: fix typo
+	* device-src/rait-device.c: add a private threadpool-like
+	  implementation for old glibs, where GThreadPool is susceptible to
+	  deadlock
+
 2008-09-29  Dustin J. Mitchell <dustin@zmanda.com>
 	* device-src/device.c device-src/device.h device-src/null-device.c
 	  device-src/property.c device-src/property.h device-src/rait-device.c
